[metadata]
name = iproute4mac
version = 0.1.0
author = Ettore Simone
author_email = ettore.simone@gmail.com
description = iproute for Mac
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/signal-09/iproute4mac
project_urls =
    Source = https://github.com/signal-09/iproute4mac
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Topic :: System :: Networking
keywords = iproute2, ip, bridge

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ip = iproute4mac.ip:main
    bridge = iproute4mac.bridge:main
