[metadata]
name = iproute4mac
summary = iproute for Mac
description_file =
    README.rst
author = Ettore Simone
author_email = ettore.simone@gmail.com
home_page = https://github.com/signal-09/iproute4mac
python_requires = >=3.10
license = Apache License, Version 2.0
project_urls =
    Source = https://github.com/signal-09/iproute4mac
    Bug Reports = https://github.com/signal-09/iproute4mac/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.10
    Topic :: System :: Networking
keywords = iproute2, ip, ifconfig

[options]
install_requires =
    pbr

[files]
packages =
    iproute4mac
data_files =
    share/man = man/*

[entry_points]
console_scripts =
    ip = iproute4mac.cmd.ip:main
    bridge = iproute4mac.cmd.bridge:main
